feat: API PUT Update Profile dan Update Password, Refactor User Model dan Auth Controller
